*I think* I fixed the layout problems.

--- a/plugins/css/infoPlugin.css
+++ b/plugins/css/infoPlugin.css
@@ -2,7 +2,6 @@
   text-align: center;
   margin: 0 auto;
   display: block;
-  background-color: rgba(0,0,0,0.3);
   width: 100%;
   height: auto;
   height: 250px;
