--- a/site/css/main.css
+++ b/site/css/main.css
@@ -21,13 +21,6 @@ ul {
   background-color: #e00032;
 }
 
-.container {
-  max-width: 100%;
-  margin: 0 auto;
-  display: block;
-  float: none;
-}
-
 .logo {
   font-family: 'Titan One' sans-serif;
   font-weight: normal;
@@ -35,17 +28,24 @@ ul {
   text-align: center;
   padding: 28px;
   font-size: 64px;
+  margin-left: 124px;
 }
 
 #header-elements {
   margin: 0 auto;
-  max-width: 960px;
   display: block;
   float: none;
+  max-width: 960px;
+  text-align: center
 }
 
 #searchBox, .search-items {
   width: 640px;
+}
+
+#searchBox {
+  display: inline-block;
+  margin-right: 30px;
 }
 
 .search-items {
@@ -63,7 +63,7 @@ ul {
   border: none;
   color: #7f8c8d;
   box-shadow: 0px 2px 3px #7f8c8d;
-  display: inline;
+  display: inline-block;
   background-color: #ffffff;
   transition: box-shadow .2s;
   -moz-transition: box-shadow .2s;
@@ -71,9 +71,34 @@ ul {
   padding: 0px 10px;
 }
 
+.searchResult {
+  width: 100%;
+  padding: 15px 10px;
+  color: #333333;
+  font-family: 'Roboto' sans-serif;
+  background-color: #ffffff;
+  margin-left: -10px;
+  border-top: 2px solid #efefef;
+}
+
+.searchResult:hover {
+  background-color: #efefef;
+}
+
+.searchResult h2 {
+  font-weight: bold;
+}
+
+.searchResult span {
+  padding-right: 10px;
+}
+
+.searchResult:hover {
+  cursor: pointer;
+}
+
 #add-button, #settings-button {
-  background-color: #03a9f4;
-  box-shadow: 0px 2px 3px #7f8c8d;
+  border: solid 3px #ffffff;
   border-radius: 100%;
   -moz-border-radius: 100%;
   -webkit-border-radius: 100%;
@@ -81,9 +106,9 @@ ul {
   padding: 3px;
   width: 30px;
   height: 30px;
+  display: inline-block;
+  margin: 10px;
   float: right;
-  margin-top: -35px;
-  margin-right: 20px;
   transition: .25s;
   -moz-transition: .25s;
   -webkit-transition: .25s;
@@ -91,6 +116,7 @@ ul {
 
 #add-button:hover, #settings-button:hover {
   cursor: pointer;
+  background-color: #ffffff;
 }
 
 #add-button img, #settings-button img {
@@ -173,50 +199,11 @@ ul {
   cursor: pointer;
 }
 
-#add-box, #settings-box {
-  display: none
-}
-
-.searchResult {
-  width: 100%;
-  padding: 15px 10px;
-  color: #333333;
-  font-family: 'Roboto' sans-serif;
-  background-color: #ffffff;
-  margin-left: -10px;
-  border-top: 2px solid #efefef;
-}
-
-.searchResult:hover {
-  background-color: #efefef;
-}
-
-.searchResult h2 {
-  font-weight: bold;
-}
-
-.searchResult span {
-  padding-right: 10px;
-}
-
-.searchResult:hover {
-  cursor: pointer;
-}
-
 #main-content {
   margin-top: 30px;
 }
 
-.tiles {
-  margin: auto;
-  display: block;
-  float: none;
-  max-width: 960px !important;
-  width: 100% !important;
-}
-
 .gridster {
-  margin: 0 auto;
   transition: all .6s;
   -moz-transition: all .6s;
   -webkit-transition: all .6s;
@@ -231,14 +218,12 @@ ul {
 }
 
 .gridster .preview-holder {
-    margin: 15px 0px 0px 15px;
+  margin: 15px 0px 0px 15px;
 }
 
 .plugin {
   background-color: #e00032;
   width: 290px;
-  margin: 15px;
-  float: left;
   color: #ffffff;
   font-family: 'Roboto' sans-serif;
   box-shadow: 0px 2px 10px #7f8c8d;
@@ -263,61 +248,4 @@ header {
 header span {
 	padding-right: 5px;
   float: right;
-}
-
-@media (max-width:900px) {
-  #top-bar {
-    height: 200px;
-  }
-
-  .logo {
-    font-size: 56px;
-    margin-bottom: 5px;
-  }
-
-  #add-button, #settings-button {
-    display: none;
-  }
-
-  #searchBox {
-    margin: 0 auto;
-    max-width: 720px;
-    display: block;
-    float: none;
-  }
-
-  #search {
-    margin-top: 15px;
-    width: 100%;
-  }
-
-  #buttonBoxes {
-    margin: 0 auto;
-    display: block;
-    float: none;
-    width: 100%;
-    text-align: center;
-  }
-
-  #add-box, #settings-box {
-    background-color: #03a9f4;
-    color: #ffffff;
-    width: 110px;
-    height: 50px;
-    float: none;
-    margin: -20px 10px 0px 10px;
-    transition: .25s;
-    -moz-transition: .25s;
-    -webkit-transition: .25s;
-    display: inline-block;
-  }
-
-  #add-box img, #settings-box img {
-    height: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    display: block;
-    float: none;
-  }
 }
